new file:   figures/Current_biomass_and_coherence_2019.png 	modified:   figures/annual_300_400_451_1.jpeg 	modified:   figures/annual_300_400_451_currents1.jpeg 	modified:   figures/backscatter_vs_biomass.png 	deleted:    figures/figures_submit/fig_01_adcp_moorings_roi.jpg 	deleted:    figures/figures_submit/fig_02_biomass_daily_monthly.png 	deleted:    figures/figures_submit/fig_03_climatology_biomass_ss_chl.png 	deleted:    figures/figures_submit/fig_04_biomass_40m_104m.png 	deleted:    figures/figures_submit/fig_05_09_10.tar.xz 	deleted:    figures/figures_submit/fig_05_biomass_40m_104m_2018.png 	deleted:    figures/figures_submit/fig_06_intraannual_100_250_351.jpeg 	deleted:    figures/figures_submit/fig_07_annual_300_400_451.jpeg 	deleted:    figures/figures_submit/fig_08_intraseasonal_30_90_181.jpeg 	deleted:    figures/figures_submit/fig_09_40m_biomass_wavelet_2018.png 	deleted:    figures/figures_submit/fig_09_40m_biomass_wavelet_2018a.jpeg 	deleted:    figures/figures_submit/fig_10_ss_wavelet_2018.png 	deleted:    figures/figures_submit/fig_10_ss_wavelet_2018a.jpeg 	new file:   figures/intraannual_100_250_351.jpeg 	deleted:    figures/intraannual_100_250_351.png 	new file:   figures/intraannual_100_250_351_currents.jpeg 	modified:   scripts/comparison_rj_ap.ipynb 	modified:   writings/bc_writing/bs_citations.bib 	modified:   writings/bc_writing/bs_manuscript.aux 	modified:   writings/bc_writing/bs_manuscript.bbl 	modified:   writings/bc_writing/bs_manuscript.blg 	modified:   writings/bc_writing/bs_manuscript.out 	modified:   writings/bc_writing/bs_manuscript.pdf 	modified:   writings/bc_writing/bs_manuscript.synctex.gz 	modified:   writings/bc_writing/bs_manuscript.tex

--- a/writings/bc_writing/bs_citations.bib
+++ b/writings/bc_writing/bs_citations.bib
@@ -454,6 +454,17 @@
 	year={2005},
 	publisher={Elsevier}
 }
+@article{smith1998seasonal,
+	title={Seasonal response of zooplankton to monsoonal reversals in the Arabian Sea},
+	author={Smith, Sharon and Roman, Michael and Prusova, Irina and Wishner, Karen and Gowing, Marcia and Codispoti, LA and Barber, Richard and Marra, John and Flagg, Charles},
+	journal={Deep Sea Research Part II: Topical Studies in Oceanography},
+	volume={45},
+	number={10-11},
+	pages={2369--2403},
+	year={1998},
+	publisher={Elsevier}
+}
+
 @article{jiang2007temporal,
 	title={Temporal variability of zooplankton biomass from ADCP backscatter time series data at the Bermuda Testbed Mooring site},
 	author={Jiang, Songnian and Dickey, Tommy D and Steinberg, Deborah K and Madin, Laurence P},
@@ -919,6 +930,147 @@
 	volume={227},
 	pages={103670},
 	year={2022},
+	publisher={Elsevier}
+}
+@article{marra2005jgofs,
+	title = {Primary productivity in the Arabian Sea: A synthesis of JGOFS data},
+	journal = {Progress in Oceanography},
+	volume = {65},
+	number = {2},
+	pages = {159-175},
+	year = {2005},
+	note = {The Arabian Sea of the 1990s: New Biogeochemical Understanding},
+	issn = {0079-6611},
+	doi = {https://doi.org/10.1016/j.pocean.2005.03.004},
+	url = {https://www.sciencedirect.com/science/article/pii/S007966110500042X},
+	author = {John Marra and Richard T. Barber}
+}
+@article{nethery2007zm,
+	title     = {Vertical propagation of baroclinic Kelvin waves along the west coast of India},
+	author    = {Nethery, D and Shankar, D},
+	journal   = {J. Earth Syst. Sci.},
+	publisher = {Springer Science and Business Media LLC},
+	volume    =  {116},
+	number    =  {4},
+	pages     = {331--339},
+	month     =  {aug},
+	year      =  {2007}
+}
+
+@article{kidwai2000dd,
+	title     = {Zooplankton: pre-southwest and northeast monsoons of 1993 to 1994, from the North Arabian Sea},
+	author    = {Kidwai, S and Amjad, S},
+	journal   = {Mar. Biol.},
+	publisher = {Springer Science and Business Media LLC},
+	volume    = {136},
+	number    = {3},
+	pages     = {561--571},
+	month     = {apr},
+	year      = {2000}
+}
+@article{barber2001qn,
+	title     = {Primary productivity and its regulation in the Arabian Sea
+	during 1995},
+	author    = {Barber, Richard T and Marra, John and Bidigare, Robert C and
+	Codispoti, Louis A and Halpern, David and Johnson, Zackary and
+	Latasa, Mikel and Goericke, Ralf and Smith, Sharon L},
+	journal   = {Deep Sea Res. Part 2 Top. Stud. Oceanogr.},
+	publisher = {Elsevier BV},
+	volume    =  {48},
+	number    = {6-7},
+	pages     = {1127--1172},
+	month     =  {jan},
+	year      =  {2001},
+	language  = {en}
+}
+
+@article{longhurst1990gd,
+	title     = {Abundance of oil sardine (Sardinella longiceps) and upwelling on
+	the southwest coast of India},
+	author    = {Longhurst, Alan R and Wooster, Warren S},
+	abstract  = {The abundance of oil sardine (Sardinella longiceps) on the
+	Malabar coast is highly variable on the decadal scale. During
+	this century there have been several periods of relatively high
+	abundance, and several major population crashes. O-group
+	recruitment to the fishery begins towards the end of the summer
+	monsoon, and its success is statistically related to sea level
+	at Cochin just prior to onset of the monsoon. At this time, sea
+	level indicates remote forcing of upwelling, rather than the
+	wind-driven upwelling that occurs during the monsoon. Unusually
+	early remote-forcing appears to inhibit subsequent recruitment,
+	perhaps through exclusion of spawning fish from the neritic zone
+	by oxygen-deficient upwelled water.},
+	journal   = {Can. J. Fish. Aquat. Sci.},
+	publisher = {Canadian Science Publishing},
+	volume    = {47},
+	number    = {12},
+	pages     = {2407--2419},
+	month     = {dec},
+	year      = {1990},
+	language  = {en}
+}
+
+@article{kim.2018,
+	author = "Kim, Jieun and Khim, Boo‐Keun and Ikehara, Minoru and Lee, Jongmin",
+	doi = "10.1038/s41598-018-25415-7",
+	title = "Orbital-Scale Denitrification Changes in the Eastern Arabian Sea During the Last 800 Kyrs",
+	journal = "Scientific Reports",
+	year = "2018"
+}
+
+@article{sudheesh2022omz,
+	title = {Oxygen minimum zone along the eastern Arabian Sea: Intra-annual variation and dynamics based on ship-borne studies},
+	journal = {Progress in Oceanography},
+	volume = {201},
+	pages = {102742},
+	year = {2022},
+	issn = {0079-6611},
+	doi = {https://doi.org/10.1016/j.pocean.2022.102742},
+	url = {https://www.sciencedirect.com/science/article/pii/S0079661122000040},
+	author = {V. Sudheesh and G.V.M. Gupta and Yudhishtir Reddy and Kausar F. Bepari and N.V.H.K. Chari and C.K. Sherin and S.S. Shaju and Ch.V. Ramu and Anil Kumar Vijayan},
+}
+@article{sarma2020potential,
+	title={Potential mechanisms responsible for occurrence of core oxygen minimum zone in the north-eastern Arabian Sea},
+	author={Sarma, VVSS and Bhaskar, TVS Udaya and Kumar, J Pavan and Chakraborty, Kunal},
+	journal={Deep Sea Research Part I: Oceanographic Research Papers},
+	volume={165},
+	pages={103393},
+	year={2020},
+	publisher={Elsevier}
+}
+@article{jayakumar.2004,
+	author = "Jayakumar, D. A. and Francis, Christopher A. and Naqvi, S.W.A. and Ward, Bess B.",
+	doi = "10.3354/ame034069",
+	title = "Diversity of Nitrite Reductase Genes (nirS) in the Denitrifying Water Column of the Coastal Arabian Sea",
+	journal = "Aquatic Microbial Ecology",
+	year = "2004"
+}
+
+@article{Kumar.2000,
+	author = "Kumar, S. Prasanna and Madhupratap, M. and Kumar, M. Dileep and Gauns, Mangesh and Muraleedharan, P.M. and Sarma, V. V. S. S. and Souza, Sílvia Naves de",
+	doi = "10.1007/bf02708331",
+	title = "Physical Control of Primary Productivity on a Seasonal Scale in Central and Eastern Arabian Sea",
+	journal = "Journal of Earth System Science",
+	year = "2000"
+}
+@article{shi1999remotely,
+	title={Remotely sensed features in the US JGOFS Arabian Sea process study},
+	author={Shi, Wei and Morrison, John M and B{\"o}hm, Emanuele and Manghnani, Vijayakumar},
+	journal={Deep Sea Research Part II: Topical Studies in Oceanography},
+	volume={46},
+	number={8-9},
+	pages={1551--1575},
+	year={1999},
+	publisher={Elsevier}
+}
+@article{morrison1998seasonal,
+	title={Seasonal variation of hydrographic and nutrient fields during the US JGOFS Arabian Sea Process Study},
+	author={Morrison, John M and Codispoti, LA and Gaurin, S and Jones, Burton and Manghnani, V and Zheng, Z},
+	journal={Deep Sea Research Part II: Topical Studies in Oceanography},
+	volume={45},
+	number={10-11},
+	pages={2053--2101},
+	year={1998},
 	publisher={Elsevier}
 }
 
