modified:   .gitignore 	modified:   figures/climatology_biomass_ss_chl.png 	modified:   writings/bc_writing/bs_citations.bib 	modified:   writings/bc_writing/bs_manuscript.pdf 	modified:   writings/bc_writing/bs_manuscript.tex 	new file:   writings/bc_writing/bs_manuscript_2024_09_06.tex

--- a/writings/bc_writing/bs_citations.bib
+++ b/writings/bc_writing/bs_citations.bib
@@ -1074,3 +1074,31 @@
 	publisher={Elsevier}
 }
 
+@article{ashadevi20101070,
+	title = {Seasonal variations and trophic ecology of microzooplankton in the southeastern Arabian Sea},
+	journal = {Continental Shelf Research},
+	volume = {30},
+	number = {9},
+	pages = {1070-1084},
+	year = {2010},
+	issn = {0278-4343},
+	doi = {https://doi.org/10.1016/j.csr.2010.02.007},
+	url = {https://www.sciencedirect.com/science/article/pii/S0278434310000439},
+	author = {C.R. {Asha Devi} and R. Jyothibabu and P. Sabu and Josia Jacob and H. Habeebrehman and M.P. Prabhakaran and K.J. Jayalakshmi and C.T. Achuthankutty},
+	keywords = {Microzooplankton, Dinoflagellates, Ciliates, Stratification, Upwelling, Southeastern Arabian Sea},
+	abstract = {The seasonal ecological response of microzooplankton in the southeastern Arabian Sea is presented. During the spring intermonsoon period, stratification and depletion of nitrate in the surface waters (nitracline was at 60m depth) cause low integrated chlorophyll a (av. 19±11.3mgm−2) and primary production (av. 164±91mgCm−2d−1). On the other hand, nutrient enrichment associated with coastal upwelling and river influx during the onset and peak summer monsoon resulted in high integrated chlorophyll a (av. 21±6mgm−2 and av. 29±21mgm−2, respectively) and primary production (av. 255±94mgCm−2d−1 and av. 335±278mgCm−2d−1, respectively). During all three periods, diazotropic cyanobacterium Trichodesmium erythraeum dominated in the nutrient depleted surface waters. A general increase in abundance of larger diatoms was evident in the surface waters of the inshore region during monsoon periods. The microzooplankton abundance was found to be significantly higher during the spring intermonsoon (av.241±113×103indm−2) as compared to onset of summer monsoon (av. 105±89×103indm−2) and peak summer monsoon (av.185±175×103indm−2). Microzooplankton community during the spring intermonsoon was numerically dominated by ciliates while heterotrophic dinoflagellate was the dominant ones during the monsoon periods. The high abundance of ciliates during the spring intermonsoon could be attributed to the stratified environmental condition prevailed in the study area which favors high abundance of smaller phytoplankton and cyanobacteria, the most preferred food of ciliates. On the other hand, the dominance of heterotrophic dinoflagellates during the monsoon periods could be linked to their ability to graze larger diatoms which were abundant during the monsoon periods. The overall results show low abundance of microzooplankton in the eastern Arabian Sea during the monsoon periods mainly due to a decline in ciliates abundance. This decline during the monsoon periods could be the result of (a) low abundance of smaller phytoplankton and (b) high stock of mesozooplankton predators (av. 245ml 100m−3).}
+}
+
+@article{schott20011,
+	title = {The monsoon circulation of the Indian Ocean},
+	journal = {Progress in Oceanography},
+	volume = {51},
+	number = {1},
+	pages = {1-123},
+	year = {2001},
+	issn = {0079-6611},
+	doi = {https://doi.org/10.1016/S0079-6611(01)00083-0},
+	url = {https://www.sciencedirect.com/science/article/pii/S0079661101000830},
+	author = {Friedrich A. Schott and Julian P. McCreary},
+	abstract = {In this paper, we review observations, theory and model results on the monsoon circulation of the Indian Ocean. We begin with a general overview, discussing wind-stress forcing fields and their anomalies, climatological distributions of stratification, mixed-layer depths, altimetric sea-level distributions, and seasonal circulation patterns (Section 2). The three main monsoon circulation sections deal with the equatorial regime (Section 3), the Somali Current and western Arabian Sea (Section 4), and the Bay of Bengal, seasonally reversing monsoon currents south of India and Sri Lanka, and the eastern and central Arabian Sea (Section 5). For the equatorial regime, we discuss equatorial jets and undercurrents, their interactions with the eastern and western boundaries, and intraseasonal and vertically propagating signals. In the Somali Current section, we describe the ocean's responses to the summer and winter monsoon winds, and outline the modelling efforts that have been carried out to understand them. In the Bay of Bengal section, we present observational and modeling evidence showing the importance of remote forcing from the east, which to a large extent originates along the equator. In the following three sections, we review the southern-hemisphere subtropical regime and its associated boundary currents (Section 6), the Indonesian Throughflow (Section 7), the Red Sea and Persian Gulf circulations (Section 8), and discuss aspects of their interactions with other Indian-Ocean circulations. Next, we describe the Indian Ocean's deep and shallow meridional overturning cells (Section 9). Model results show large seasonal variability of the meridional overturning streamfunction and heat flux, and we discuss possible physical mechanisms behind this variability. While the monsoon-driven variability of the deep cell is mostly a sloshing motion affecting heat storage, interesting water-mass transformations and monsoonal reversals occur in the shallow cross-equatorial cell. In the mean, the shallow cell connects the subduction areas in the southern subtropics and parts of the Indonesian Throughflow waters with the upwelling areas of the northern hemisphere via the cross-equatorial Somali Current. Its near-surface branch includes a shallow equatorial roll that is seasonally reversing. We close by looking at coupled ocean-climate anomalies, in particular the large events that were observed in the tropical and subtropical Indian Ocean in 1993/94 and 1997/98. These events have been interpreted as an independent Indian-Ocean climate mode by some investigators and as an ENSO-forced anomaly by others.}
+}
